# json_maj

./: .gitignore  README.md  cli.spec  pyproject.toml
json_maj/: cli.py  create_executable.py  main.py
tests/: test.json  test_cli.py  test_main.py
