[tool.poetry]
name = "json_maj"
version = "0.0.7"
description = "Updates Jsons w/ json, key pair, or entire dictionary as arguments"
authors = ["anthony galassi <28850131+bendhouseart@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.0.0"
pyinstaller = "^3.0"

[tool.poetry.scripts]
updatejson = 'json_maj.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
